Spacing fix pt 2

--- a/styles.css
+++ b/styles.css
@@ -720,3 +720,8 @@ input[type="range"] {
   flex: 0 0 auto;
   min-width: 140px;
 }
+
+.iso-spacing {
+  margin-top: 5px; 
+  margin-bottom: -10px; 
+}
